week 5 updated
