# controllers/tournaments.js
@@ -1,0 +1,37 @@
+const mongodb = require('../db/connect');
+const ObjectId = require('mongodb').ObjectId;
+
+const getAll = async (req, res) => {
+  try {
+    const result = await mongodb.getDb().db().collection('tournaments').find();
+    result.toArray().then((lists) => {
+      res.setHeader('Content-Type', 'application/json');
+      res.status(200).json(lists);
+    });
+  } catch (err) {
+    res.status(500).json({ message: err.message });
+  }
+};
+
+const createTournament = async (req, res) => {
+  try {
+    const tournament = {
+      name: req.body.name,
+      location: req.body.location,
+      startDate: req.body.startDate,
+      endDate: req.body.endDate,
+      prizePool: req.body.prizePool,
+      gameType: req.body.gameType
+    };
+    const response = await mongodb.getDb().db().collection('tournaments').insertOne(tournament);
+    if (response.acknowledged) {
+      res.status(201).json(response);
+    } else {
+      res.status(500).json('Some error occurred while creating the tournament.');
+    }
+  } catch (err) {
+    res.status(500).json({ message: err.message });
+  }
+};
+
+module.exports = { getAll, createTournament };
