# routes/index.js
@@ -1,8 +1,13 @@
 const express = require('express');
 const router = express.Router();
 
+// Documentation route
 router.use('/', require('./swagger'));
-router.use('/movies', require('./movies'));
-router.use('/actors', require('./actors'));
+
+// Collection routes
+router.use('/players', require('./players'));
+router.use('/teams', require('./teams'));
+router.use('/tournaments', require('./tournaments'));
+router.use('/users', require('./users'));
 
 module.exports = router;
