# routes/movies.js
@@ -1,8 +1,0 @@
-const express = require('express');
-const router = express.Router();
-const moviesController = require('../controllers/movies');
-
-router.get('/', moviesController.getAll);
-router.post('/', moviesController.createMovie);
-
-module.exports = router;
