# routes/players.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const router = express.Router();
+const playersController = require('../controllers/players');
+
+router.get('/', playersController.getAll);
+router.post('/', playersController.createPlayer);
+
+module.exports = router;
