# routes/tournaments.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const router = express.Router();
+const tournamentsController = require('../controllers/tournaments');
+
+router.get('/', tournamentsController.getAll);
+router.post('/', tournamentsController.createTournament);
+
+module.exports = router;
