# routes/users.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const router = express.Router();
+const usersController = require('../controllers/users');
+
+router.get('/', usersController.getAll);
+router.post('/', usersController.createUser);
+
+module.exports = router;
